Emit an error for too large arrays instead of an ICE. PR tree-optimization/21105 * c-decl.c (grokdeclarator): Use TYPE_SIZE_UNIT not TYPE_SIZE in TREE_OVERFLOW check. * gcc.dg/large-size-array.c: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@103164 138bc75d-0d04-0410-961f-82ee72b054a4